src/tests/syntax_analysis_error/invalid_integer_prefix_expression/snapshots/monkey_interpreter__tests__syntax_analysis_error__invalid_integer_prefix_expression__test_invalid_integer_prefix_expression_case_2_lexical_analysis.snap
---
source: src/tests/syntax_analysis_error/invalid_integer_prefix_expression/mod.rs
assertion_line: 15
expression: tokens
---
[
    PositionedToken {
        token: Minus,
        position: Position {
            line: 1,
            column: 1,
        },
    },
]
