src/tests/syntax_analysis_error/invalid_integer_prefix_expression/snapshots/monkey_interpreter__tests__syntax_analysis_error__invalid_integer_prefix_expression__test_invalid_integer_prefix_expression_case_3_lexical_analysis.snap
---
source: src/tests/syntax_analysis_error/invalid_integer_prefix_expression/mod.rs
assertion_line: 15
expression: tokens
---
[
    PositionedToken {
        token: Let,
        position: Position {
            line: 1,
            column: 2,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "file",
        },
        position: Position {
            line: 1,
            column: 6,
        },
    },
    PositionedToken {
        token: Assign,
        position: Position {
            line: 1,
            column: 11,
        },
    },
    PositionedToken {
        token: Minus,
        position: Position {
            line: 1,
            column: 13,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 1,
            column: 14,
        },
    },
]
